Issue 47: Patch: Sprite the expand/collapse icon
git-svn-id: http://harviewer.googlecode.com/svn/trunk@299 b08ab4b8-96ea-11de-a1ee-bbbdd2d7798b

--- a/webapp/css/domTree.css
+++ b/webapp/css/domTree.css
@@ -26,7 +26,8 @@
 }
 
 .memberRow.hasChildren.opened > .memberLabelCell > .memberLabel {
-    background-image: url(images/twistyOpen.png);
+    background-image: url(images/twisty-sprites.png);
+    background-position: 3px -16px;
 }
 
 .memberRow.hasChildren > .memberLabelCell > .memberLabel:hover {
@@ -36,11 +37,7 @@
 }
 
 .memberRow.hasChildren > .memberLabelCell > .memberLabel {
-    background-image: url(images/twistyClosed.png);
+    background-image: url(images/twisty-sprites.png);
     background-repeat: no-repeat;
-    background-position: 2px 3px;
-}
-
-.memberRow.hasChildren > .memberLabelCell > .memberLabel {
-    background-position: 2px 2px;
+    background-position: 3px 3px;
 }
